syntax="proto3";

package collector;
option go_package = "collector/";
import "google/protobuf/empty.proto";

service Collector {
    rpc CollectPosts(google.protobuf.Empty) returns (Posts) {}
}

message Post {
    int64  postId = 1;
    int64  userId = 2;
    string title = 3;
    string body = 4;
    int64  page = 5;
}

message Posts {
    repeated Post posts = 1;
}